New_terraform_code/V2-EC2.tf
provider "aws" {
    region = "us-east-1"

}

resource "aws_instance" "demo-server" {
    ami = "ami-06b21ccaeff8cd686"
    instance_type = "t2.micro"
    key_name = "ddp"
    security_groups = [ "demo-sg" ]
    }
     
    resource "aws_security_group" "demo-sg" {
        name = "demo-sg"
        description = "ssh Access"

        ingress {
            description = "ssh Access"
            from_port = 22
            to_port = 22
            protocol = "tcp"
            cidr_blocks = [ "0.0.0.0/0" ]

        }

        egress {
            from_port = 0
            to_port = 0
            protocol = "-1"
            cidr_blocks = [ "0.0.0.0/0" ]
            ipv6_cidr_blocks = [ "::/0" ]
        }     

        tags = {
          name = "ssh-port"
        }
    }
